--- a/kitty.conf
+++ b/kitty.conf
@@ -6,7 +6,7 @@
 #: individual font faces and even specify special fonts for particular
 #: characters.
 
-font_family        FiraCode Nerd Font Mono
+font_family        CaskaydiaCove Nerd Font
 # bold_font        auto
 # italic_font      auto
 # bold_italic_font auto
@@ -24,7 +24,7 @@ font_family        FiraCode Nerd Font Mono
 #:     italic_font      Operator Mono Book Italic
 #:     bold_italic_font Operator Mono Medium Italic
 
-font_size 12
+font_size 14
 
 #: Font size (in pts).
 
@@ -289,7 +289,7 @@ modify_font underline_thickness 200%
 
 #: The thickness of the underline cursor (in pts).
 
-# cursor_blink_interval -1
+cursor_blink_interval 0
 
 #: The interval to blink the cursor (in seconds). Set to zero to
 #: disable blinking. Negative values mean use system default. Note
@@ -2478,6 +2478,6 @@ map kitty_mod+] next_layout
 
 
 # BEGIN_KITTY_THEME
-# Cyberpunk Neon
+# Kanagawa
 include current-theme.conf
 # END_KITTY_THEME
