--- a/current-theme.conf
+++ b/current-theme.conf
@@ -1,47 +1,70 @@
-## name: Cyberpunk Neon
-## author: Theo (theo-grivel)
-## license: CC-BY-SA-4.0
-## upstream: https://github.com/Roboron3042/Cyberpunk-Neon/blob/master/terminal/kitty/cyberpunk-neon.conf
+# vim:ft=kitty
 
-background            #000b1e
-foreground            #0abdc6
-selection_background  none
-selection_foreground  none
-cursor                #0abdc6
+## name: Kanagawa
+## author: Tommaso Laurenzi
+## license: MIT
+## upstream: https://github.com/rebelot/kanagawa.nvim/
+## blurb: NeoVim dark colorscheme inspired by the colors of the famous painting
+## by Katsushika Hokusai.
 
-# Black, Gray, Silver, White
+#: The basic colors
 
-color0                #000b1e
-color8                #1c61c2
-color7                #0abdc6
-color15               #0abdc6
+foreground                      #dcd7ba
+background                      #1f1f28
+selection_foreground            #c8c093
+selection_background            #2d4f67
 
-# Red
+#: Cursor colors
 
-color1                #ff0000
-color9                #ff0000
+cursor                          #c8c093
 
-# Green
+#: URL underline color when overing with mouse
 
-color2                #d300c4
-color10               #d300c4
+url_color                       #72a7bc
 
-# Yellow
+#: Tab bar colors
 
-color3                #f57800
-color11               #ff5780
+active_tab_foreground           #c8c093
+active_tab_background           #1f1f28
+inactive_tab_foreground         #727169
+inactive_tab_background         #1f1f28
 
-# Blue
+#: The basic 16 colors
 
-color4                #133e7c
-color12               #00ff00
+#: black
+color0  #16161d
+color8  #727169
 
-# Purple
+#: red
+color1  #c34043
+color9  #e82424
 
-color5                #711c91
-color13               #711c91
+#: green
+color2  #76946a
+color10 #98bb6c
 
-# Teal
+#: yellow
+color3  #c0a36e
+color11 #e6c384
 
-color6                #0abdc6
-color14               #0abdc6
+#: blue
+color4  #7e9cd8
+color12 #7fb4ca
+
+#: magenta
+color5  #957fb8
+color13 #938aa9
+
+#: cyan
+color6  #6a9589
+color14 #7aa89f
+
+#: white
+color7  #c8c093
+color15 #dcd7ba
+
+
+#: You can set the remaining 240 colors as color16 to color255.
+
+color16 #ffa066
+color17 #ff5d62
